# django-crm

./: pyproject.toml  yourdatabasename.db
djcrm/: settings.py
