[tool.poetry]
name = "django-crm"
version = "0.1.0"
description = ""
authors = ["Juan Palomino <juan.palomino@bairesdev.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.4"
django-environ = "^0.9.0"
whitenoise = "^6.2.0"
crispy-tailwind = "^0.5.0"
django-tailwind = "1.1.0"
Pillow = "8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
